terraformgood/Terraform/terraformact5.2/main.tf
# Terraform block 
# what component is this, resource, provider, variable, output
# Between 0 - 2 labels "" depending on the component

variable "access_key" {
    type = string
}
variable "secret_key" {
    type = string
}

provider "aws" {
  # Expressions and arguments
  access_key = var.access_key
  secret_key = var.secret_key
  region     = "eu-west-1"
}


# When running terraform we run the following commands
# terraform fmt - format our files (optional)
# terraform init - initialise the API
# terraform plan - Create a config plan
# terraform apply - apply our config plan


# Variables are a large part of the Terraform infrastructure
# Local Variables are created directly in the scope, input variables can be accessed globally 


#Create the VPC
 resource "aws_vpc" "Main" {                # Creating VPC here
   cidr_block       = var.main_vpc_cidr     # Defining the CIDR block use 10.0.0.0/24 for demo
   instance_tenancy = "default"
 }
# Create Internet Gateway and attach it to VPC
 resource "aws_internet_gateway" "IGW" {    # Creating Internet Gateway
    vpc_id =  aws_vpc.Main.id               # vpc_id will be generated after we create VPC
 }
# Create a Public Subnets.
 resource "aws_subnet" "publicsubnets" {    # Creating Public Subnets
   vpc_id =  aws_vpc.Main.id
   cidr_block = "${var.public_subnets}"        # CIDR block of public subnets
 }
# Create a Private Subnet                   # Creating Private Subnets
 resource "aws_subnet" "privatesubnets" {
   vpc_id =  aws_vpc.Main.id
   cidr_block = "${var.private_subnets}"          # CIDR block of private subnets
 }
#Route table for Public Subnet's
 resource "aws_route_table" "PublicRT" {    # Creating RT for Public Subnet
    vpc_id =  aws_vpc.Main.id
         route {
    cidr_block = "0.0.0.0/0"               # Traffic from Public Subnet reaches Internet via Internet Gateway
    gateway_id = aws_internet_gateway.IGW.id
     }
 }
# Route table for Private Subnet's
 resource "aws_route_table" "PrivateRT" {    # Creating RT for Private Subnet
   vpc_id = aws_vpc.Main.id
   route {
   cidr_block = "0.0.0.0/0"             # Traffic from Private Subnet reaches Internet via NAT Gateway
   nat_gateway_id = aws_nat_gateway.NATgw.id
   }
 }
# Route table Association with Public Subnet's
 resource "aws_route_table_association" "PublicRTassociation" {
    subnet_id = aws_subnet.publicsubnets.id
    route_table_id = aws_route_table.PublicRT.id
 }
# Route table Association with Private Subnet's
 resource "aws_route_table_association" "PrivateRTassociation" {
    subnet_id = aws_subnet.privatesubnets.id
    route_table_id = aws_route_table.PrivateRT.id
 }
 resource "aws_eip" "nateIP" {
   vpc   = true
 }
# Creating the NAT Gateway using subnet_id and allocation_id
 resource "aws_nat_gateway" "NATgw" {
   allocation_id = aws_eip.nateIP.id
   subnet_id = aws_subnet.publicsubnets.id
 }


resource "aws_instance" "demo-vm" {
  ami             = "ami-0d75513e7706cf2d9"
  instance_type   = "t2.micro"
  security_groups = ["launch-wizard-2"]
  key_name        = "PuttyDesktop"
}
resource "aws_instance" "demo-vm2" {
  ami             = "ami-0d75513e7706cf2d9"
  instance_type   = "t2.micro"
  security_groups = ["launch-wizard-2"]
  key_name        = "PuttyDesktop"
}
resource "aws_instance" "demo-vm3" {
  ami             = "ami-0d75513e7706cf2d9"
  instance_type   = "t2.micro"
  security_groups = ["launch-wizard-2"]
  key_name        = "PuttyDesktop"
}


output "vm_public_ip" {

    value = aws_instance.demo-vm.public_ip
}
output "vm_public_ip2" {

    value = aws_instance.demo-vm2.public_ip
}

output "vm_public_ip3" {

    value = aws_instance.demo-vm3.public_ip
}
